--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sketch-js": "^1.1.3",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
+    "typeface-rubik": "^0.0.72",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
